@startuml
skin rose

package Diagrama {
    abstract class Instrumento {
        -codigo: String
        -precio: double
        -stock: int
        -material: String
        +Instrumento(codigo: String,precio: double,stock: int,material: String)
        +getCodigo(): String
        +getPrecio(): double
        +getStock(): int
        +getMaterial(): String
        +setStock(stock: int): void
    }

    class Cuerda {
        -modeloInst: String
        -cuerda: String
        -numeroCuerdas: int
        -tipo: String
        +Cuerda(codigo: String, precio: double, stock: int, material: String
        modeloInst: String, cuerda: String, numeroCuerdas: int, tipo: String)
        +getModeloInst(): String
        +getCuerda(): String
        +getTipo(): String
        +getNumeroCuerdas(): int

    }
    Cuerda--|>Instrumento

    class Percusion {
        -modeloInst: String
        -tipo: String
        -altura: String
        +Percusion(codigo: String, precio: double, stock: int, material: String
        modeloInst: String ,tipo: String, altura: double)
        +getModeloInst(): String
        +getTipo(): String
        +getAltura(): double
    }
    Percusion--|>Instrumento

    class Viento {
        -modeloInst: String
        +Viento(codigo: String, precio: double, stock: int, material: String
        modeloInst: String)
        +getModeloInst(): String
    }
    Viento--|>Instrumento

    class ListaInstrumentos {
        -listaInstrumentos: instrumentos []
        -cantidadActual: int
        -cantidadMax: int
        +ListaInstrumentos(cantidadMax: int)
        +getCantidadActual(): int
        +agregar(instrumento: Instrumento): void
        +ObtenerInstrumento(posicion: int): Instrumento
        +Informacion(nombreClase: String, posicion: int): void
    }
    ListaInstrumentos o->"*" Instrumento
}

package servicios {

    interface Interface{
    +LecturaArchivo(): void
    +menu(): void
    +agregarInstrumento(): void
    +vender(): void
    +verificarStock(codigo: Sring): boolean
    +despliegueBoleta(nombreClase: String, posicion : int):void
    +consultarInventario(): void
    +cierre(): void

    }

    class InterfaceImpl{
        -listadoInstrumentos: ListaInstrumentos
        +InterfaceImpl()
    }
    InterfaceImpl..|> Interface
    InterfaceImpl --> ListaInstrumentos
}
@enduml